// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gen-react > renders the Button wrapper 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/button.yaml

import "@teseor/css/components/button.css";
import type { ComponentProps, ElementType, ReactNode, Ref } from "react";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ButtonVariant = "solid" | "outline" | "ghost" | "link";

type ButtonIntent = "primary" | "neutral" | "success" | "warning" | "danger";

type ButtonSize = "sm" | "md" | "lg";

type ButtonOwnProps = {
  /** Visual style. */
  variant?: ButtonVariant;
  /** Semantic color. */
  intent?: ButtonIntent;
  /** Size scale. */
  size?: Responsive<ButtonSize>;
  /** Polymorphic root element. Defaults to \`button\`; set to \`a\` for link-shaped triggers (paired with \`variant: link\`). */
  as?: ElementType;
  /** Disables interaction and applies the disabled visual state. Mapped to the native \`disabled\` attribute on \`button\`, \`aria-disabled="true"\` otherwise. */
  disabled?: boolean;
  /** Shows a spinner in place of the label and disables interaction. The original label stays in the accessibility tree. */
  loading?: boolean;
  /** Icon rendered before the label in the inline direction. Slot size scales with \`size\`. Accepts any node (icon component, SVG, etc.). */
  iconStart?: ReactNode;
  /** Icon rendered after the label in the inline direction. Accepts any node. */
  iconEnd?: ReactNode;
  /** Stretches the button to the inline-size of its container. Responsive so layouts can pin block-width on mobile and shrink to content above. */
  block?: Responsive<boolean>;
  children?: ReactNode;
  ref?: Ref<HTMLElement>;
};

export type ButtonProps = Readonly<
  ButtonOwnProps & Omit<ComponentProps<"button">, keyof ButtonOwnProps>
>;

/**
 * A trigger that performs an action when activated.
 *
 * @example Solid Primary
 * \`\`\`tsx
 * <Button variant="solid" intent="primary">Label</Button>
 * \`\`\`
 *
 * @example Solid Danger Md
 * \`\`\`tsx
 * <Button variant="solid" intent="danger" size="md">Label</Button>
 * \`\`\`
 *
 * @example Outline Neutral
 * \`\`\`tsx
 * <Button variant="outline" intent="neutral">Label</Button>
 * \`\`\`
 */
export function Button(props: ButtonProps) {
  const {
    variant,
    intent,
    size,
    as,
    disabled,
    loading,
    iconStart,
    iconEnd,
    block,
    children,
    ref,
    className,
    ...rest
  } = props;

  const Component = as ?? "button";
  const isButton = Component === "button";
  const inactive = disabled === true || loading === true;
  const mergedClassName = className ? \`t-button \${className}\` : "t-button";

  return (
    <Component
      {...rest}
      ref={ref}
      className={mergedClassName}
      data-variant={variant}
      data-intent={intent}
      {...responsiveDataAttrs("size", size)}
      {...responsiveDataAttrs("block", block)}
      data-loading={loading === true ? "true" : undefined}
      disabled={isButton ? inactive : undefined}
      aria-disabled={!isButton && inactive ? "true" : undefined}
      aria-busy={loading === true ? "true" : undefined}
    >
      {iconStart != null ? (
        <span data-button-icon="" data-position="start">
          {iconStart}
        </span>
      ) : null}
      <span data-button-label="">{children}</span>
      {iconEnd != null ? (
        <span data-button-icon="" data-position="end">
          {iconEnd}
        </span>
      ) : null}
      <span data-button-spinner="" aria-hidden="true" />
    </Component>
  );
}
"
`;

exports[`gen-react > renders the Cluster wrapper with multiple enum-typed props 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/cluster.yaml

import "@teseor/css/components/cluster.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ClusterAlign = "start" | "center" | "end" | "stretch" | "baseline";

type ClusterJustify = "start" | "center" | "end" | "between" | "around";

type ClusterOwnProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Block-axis alignment of children. */
  align?: Responsive<ClusterAlign>;
  /** Inline-axis distribution of children. */
  justify?: Responsive<ClusterJustify>;
  children?: ReactNode;
  ref?: Ref<HTMLElementTagNameMap["div"]>;
};

export type ClusterProps = Readonly<
  ClusterOwnProps & Omit<ComponentProps<"div">, keyof ClusterOwnProps>
>;

/**
 * A horizontal layout primitive. Wraps children on the inline axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`tsx
 * <Cluster gap="3">Label</Cluster>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`tsx
 * <Cluster gap="0">Label</Cluster>
 * \`\`\`
 *
 * @example Justify Between
 * \`\`\`tsx
 * <Cluster gap="3" justify="between">Label</Cluster>
 * \`\`\`
 */
export function Cluster(props: ClusterProps) {
  const { gap, align, justify, children, ref, className, ...rest } = props;

  const mergedClassName = className ? \`t-cluster \${className}\` : "t-cluster";

  return (
    <div
      {...rest}
      ref={ref}
      className={mergedClassName}
      {...responsiveDataAttrs("gap", gap)}
      {...responsiveDataAttrs("align", align)}
      {...responsiveDataAttrs("justify", justify)}
    >
      {children}
    </div>
  );
}
"
`;

exports[`gen-react > renders the Stack wrapper with an enum-typed prop 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/stack.yaml

import "@teseor/css/components/stack.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type StackAlign = "start" | "center" | "end" | "stretch";

type StackOwnProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Inline-axis alignment of children. */
  align?: Responsive<StackAlign>;
  children?: ReactNode;
  ref?: Ref<HTMLElementTagNameMap["div"]>;
};

export type StackProps = Readonly<StackOwnProps & Omit<ComponentProps<"div">, keyof StackOwnProps>>;

/**
 * A vertical layout primitive. Stacks children on the block axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`tsx
 * <Stack gap="3">Label</Stack>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`tsx
 * <Stack gap="0">Label</Stack>
 * \`\`\`
 *
 * @example Align Center
 * \`\`\`tsx
 * <Stack gap="4" align="center">Label</Stack>
 * \`\`\`
 */
export function Stack(props: StackProps) {
  const { gap, align, children, ref, className, ...rest } = props;

  const mergedClassName = className ? \`t-stack \${className}\` : "t-stack";

  return (
    <div
      {...rest}
      ref={ref}
      className={mergedClassName}
      {...responsiveDataAttrs("gap", gap)}
      {...responsiveDataAttrs("align", align)}
    >
      {children}
    </div>
  );
}
"
`;

exports[`gen-react > renders the barrel 1`] = `
"// AUTOGENERATED by gen-react. Do not edit.

export { Button, type ButtonProps } from "./Button.tsx";
"
`;

exports[`gen-react > renders the runtime helper 1`] = `
"// AUTOGENERATED by gen-react. Do not edit.

const RESPONSIVE_KEYS = ["base", "md", "lg", "xl", "2xl"] as const;

type Breakpoint = (typeof RESPONSIVE_KEYS)[number];

export type Responsive<T> = T | Partial<Record<Breakpoint, T>>;

export function responsiveDataAttrs(
  name: string,
  value: unknown,
): Record<string, string | undefined> {
  if (value == null || value === false) return {};
  if (typeof value === "object") {
    const obj = value as Record<string, unknown>;
    const out: Record<string, string | undefined> = {};
    for (const key of RESPONSIVE_KEYS) {
      const v = obj[key];
      if (v == null || v === false) continue;
      const attr = key === "base" ? \`data-\${name}\` : \`data-\${name}-\${key}\`;
      out[attr] = v === true ? "true" : String(v);
    }
    return out;
  }
  return { [\`data-\${name}\`]: value === true ? "true" : String(value) };
}
"
`;
